Update the name of the project in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "http-client",
+	"name": "postwoman",
 	"homepage": "https://abdelar.github.io/postwoman",
 	"version": "0.1.0",
 	"private": true,
