--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Http Client",
-	"name": "Http Client By Abdellatif ELAROUSSI",
+	"short_name": "POSTWOMAN",
+	"name": "Postwoman By Abdellatif ELAROUSSI",
 	"icons": [
 		{
 			"src": "favicon.png",
